[package]
name = "cmdainer"
version = "0.1.0"
authors = ["alex <alex@pdp7.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "5.0.1"
confy = "0.6.0"
serde = { version = "1.0.194", features = ["derive"] }
clap = { version = "4.4.18", features = ["derive"] }
which = "5.0.0"
log = { version = "0.4.20" }
env_logger = { version = "0.10.1" }

[target.'cfg(not(windows))'.dependencies]
nix = { version = "0.27.1", features = ["user"] }

[dev-dependencies]
tempfile = "3.9.0"
assert_cmd = "2.0.13"
