[package]
name = "cmdainer"
version = "0.1.0"
authors = ["alex <alex@pdp7.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "5.0.1"
confy = "0.6.1"
serde = { version = "1.0.197", features = ["derive"] }
clap = { version = "4.5.2", features = ["derive"] }
which = "6.0.0"
log = { version = "0.4.21" }
env_logger = { version = "0.11.3" }

[target.'cfg(not(windows))'.dependencies]
nix = { version = "0.28.0", features = ["user"] }

[dev-dependencies]
tempfile = "3.10.1"
assert_cmd = "2.0.14"
